<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_category_connectivity"
        android:title="@string/pref_connectivity_title">
        <EditTextPreference
            android:defaultValue="@string/pref_hostname_default"
            android:inputType="text"
            android:key="pref_hostname"
            android:summary="@string/pref_hostname_summ"
            android:title="@string/pref_hostname" />
        <EditTextPreference
            android:defaultValue="@string/pref_port_default"
            android:inputType="number"
            android:key="pref_port"
            android:numeric="integer"
            android:summary="@string/pref_port_summ"
            android:title="@string/pref_port" />
    </PreferenceCategory>
</PreferenceScreen>